--- a/pizza/templates/pizza/order.html
+++ b/pizza/templates/pizza/order.html
@@ -1,9 +1,33 @@
 <h1>Order a Pizza </h1>
 
 <h2>{{ note }}</h2>
+{% if created_pizza_pk %}
+   <a href="{% url 'edit_order' created_pizza_pk %}">Edit Your Order</a>
+{% endif %}
 
-<form action="{% url 'order' %}" method="post">
+<form action="{% url 'order' %}" method="post" >
     {% csrf_token %}
-    {{ pizzaform }}
+
+    {{ pizzaform.topping1.label_tag }}
+    {{ pizzaform.topping1 }}
+    {{ pizzaform.topping1.errors }}
+
+     {{ pizzaform.topping2.label_tag }}
+    {{ pizzaform.topping2 }}
+    {{ pizzaform.topping2.errors }}
+    <br><br>
+     <label for ="{{ pizzaform.size.id_for_label }}">Size:</label>
+    {{ pizzaform.size }}
+    {{ pizzaform.size.errors }}
+
     <input type="submit" value="Order Pizza">
+</form>
+
+<br><br>
+
+Want more than one pizza ?
+
+<form action="{% url 'pizzas' %}" method="get">
+    {{  multiple_form }}
+    <input type="submit" value="Get Pizzas">
 </form>
