--- a/pizza/templates/pizza/order.html
+++ b/pizza/templates/pizza/order.html
@@ -1,3 +1,21 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <title>Balu's Garden!</title>
+  </head>
+  <body>
+
+  { % load widget_tweaks %}
+
+  <div class="container">
+
 <h1>Order a Pizza </h1>
 
 <h2>{{ note }}</h2>
@@ -7,18 +25,13 @@
 
 <form action="{% url 'order' %}" method="post" >
     {% csrf_token %}
-
-    {{ pizzaform.topping1.label_tag }}
-    {{ pizzaform.topping1 }}
-    {{ pizzaform.topping1.errors }}
-
-     {{ pizzaform.topping2.label_tag }}
-    {{ pizzaform.topping2 }}
-    {{ pizzaform.topping2.errors }}
-    <br><br>
-     <label for ="{{ pizzaform.size.id_for_label }}">Size:</label>
-    {{ pizzaform.size }}
-    {{ pizzaform.size.errors }}
+    {% for field in pizzaform %}
+    <div class="form-group">
+    {{ field.errors }}
+    {{ field.label_tag }}
+    {% render_field field class="form-control" %}
+    </div>
+    {% endfor %}
 
     <input type="submit" value="Order Pizza">
 </form>
@@ -31,3 +44,13 @@ Want more than one pizza ?
     {{  multiple_form }}
     <input type="submit" value="Get Pizzas">
 </form>
+
+</div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  </body>
+</html>
+
